[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/Images/Icons/rock.png" type="Texture" id=1]
[ext_resource path="res://Assets/Fonts/Kenney Future Narrow.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Images/Icons/fuel.png" type="Texture" id=3]
[ext_resource path="res://Assets/Images/Icons/hammer.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Interface/BuildingCard.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scripts/Interface/HUD.gd" type="Script" id=6]
[ext_resource path="res://Scenes/Interface/AsteroidInfo.tscn" type="PackedScene" id=7]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.345098, 0.658824, 1, 0.941176 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="DynamicFont" id=6]
outline_size = 1
outline_color = Color( 0.94902, 0.94902, 0.94902, 1 )
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
outline_size = 1
outline_color = Color( 0.752941, 0.752941, 0.752941, 1 )
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxLine" id=3]
color = Color( 0.894118, 0.894118, 0.894118, 0.784314 )
vertical = true

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.266667, 0.333333, 0.407843, 0.784314 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=5]
size = 24
outline_size = 1
outline_color = Color( 0.752941, 0.752941, 0.752941, 1 )
use_filter = true
font_data = ExtResource( 2 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 6 )

[node name="Panel" type="Panel" parent="."]
margin_left = 19.0
margin_top = 20.0
margin_right = 300.0
margin_bottom = 75.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 271.0
margin_bottom = 50.0
custom_constants/separation = 10

[node name="HBoxContainerMetal" type="HBoxContainer" parent="Panel/MarginContainer/HBoxContainer"]
margin_right = 115.0
margin_bottom = 40.0
custom_constants/separation = 10

[node name="TextureRect" type="TextureRect" parent="Panel/MarginContainer/HBoxContainer/HBoxContainerMetal"]
margin_right = 32.0
margin_bottom = 40.0
texture = ExtResource( 1 )
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/HBoxContainer/HBoxContainerMetal"]
margin_left = 42.0
margin_right = 115.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="Panel/MarginContainer/HBoxContainer/HBoxContainerMetal/VBoxContainer"]
margin_right = 73.0
margin_bottom = 18.0
mouse_filter = 1
custom_colors/font_color = Color( 0.4245, 0.497398, 0.507813, 1 )
custom_fonts/font = SubResource( 6 )
text = "Metal"
align = 1

[node name="MetalAmountLabel" type="Label" parent="Panel/MarginContainer/HBoxContainer/HBoxContainerMetal/VBoxContainer"]
margin_top = 22.0
margin_right = 73.0
margin_bottom = 40.0
mouse_filter = 1
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "1234567"
align = 1

[node name="VSeparator" type="VSeparator" parent="Panel/MarginContainer/HBoxContainer"]
margin_left = 125.0
margin_right = 129.0
margin_bottom = 40.0
mouse_filter = 1
custom_styles/separator = SubResource( 3 )

[node name="HBoxContainerFuel" type="HBoxContainer" parent="Panel/MarginContainer/HBoxContainer"]
margin_left = 139.0
margin_right = 254.0
margin_bottom = 40.0
custom_constants/separation = 10

[node name="TextureRect" type="TextureRect" parent="Panel/MarginContainer/HBoxContainer/HBoxContainerFuel"]
margin_right = 32.0
margin_bottom = 40.0
texture = ExtResource( 3 )
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/HBoxContainer/HBoxContainerFuel"]
margin_left = 42.0
margin_right = 115.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="Panel/MarginContainer/HBoxContainer/HBoxContainerFuel/VBoxContainer"]
margin_right = 73.0
margin_bottom = 18.0
custom_colors/font_color = Color( 0.239216, 0.239216, 0.239216, 1 )
custom_fonts/font = SubResource( 6 )
text = "Fuel"
align = 1

[node name="FuelAmountLabel" type="Label" parent="Panel/MarginContainer/HBoxContainer/HBoxContainerFuel/VBoxContainer"]
margin_top = 22.0
margin_right = 73.0
margin_bottom = 40.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "1234567"
align = 1

[node name="Building" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuildingMenu" type="Panel" parent="Building"]
margin_left = 29.0
margin_top = 102.0
margin_right = 300.0
margin_bottom = 565.0
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Building/BuildingMenu"]
margin_left = 92.0
margin_top = 11.0
margin_right = 204.0
margin_bottom = 34.0
mouse_filter = 1
custom_fonts/font = SubResource( 5 )
text = "BUILDINGS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="Building/BuildingMenu"]
margin_left = 14.0
margin_top = 54.0
margin_right = 259.0
margin_bottom = 451.0
mouse_filter = 1
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContainerBuildingCards" type="VBoxContainer" parent="Building/BuildingMenu/ScrollContainer"]
margin_right = 245.0
margin_bottom = 397.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BuildingCardGenerator" parent="Building/BuildingMenu/ScrollContainer/ContainerBuildingCards" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 245.0
margin_bottom = 106.0
building_id = 0

[node name="BuildingCardGenerator2" parent="Building/BuildingMenu/ScrollContainer/ContainerBuildingCards" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 110.0
margin_right = 245.0
margin_bottom = 216.0
building_id = 1

[node name="Building" type="Panel" parent="Building"]
margin_left = 19.0
margin_top = 92.0
margin_right = 71.0
margin_bottom = 144.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Building/Building"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonBuilding" type="TextureButton" parent="Building/Building/CenterContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 42.0
margin_bottom = 42.0
mouse_filter = 1
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 4 )

[node name="Tween" type="Tween" parent="."]

[node name="AsteroidInfo" parent="." instance=ExtResource( 7 )]
margin_left = 331.0
margin_top = 20.0
margin_right = 331.176
margin_bottom = 20.2

[connection signal="mouse_entered" from="Panel" to="." method="_on_Panel_mouse_entered"]
[connection signal="mouse_exited" from="Panel" to="." method="_on_Panel_mouse_exited"]
[connection signal="mouse_entered" from="Building/BuildingMenu" to="." method="_on_BuildingMenu_mouse_entered"]
[connection signal="mouse_exited" from="Building/BuildingMenu" to="." method="_on_BuildingMenu_mouse_exited"]
[connection signal="mouse_entered" from="Building/Building" to="." method="_on_Building_mouse_entered"]
[connection signal="mouse_exited" from="Building/Building" to="." method="_on_Building_mouse_exited"]
[connection signal="pressed" from="Building/Building/CenterContainer/ButtonBuilding" to="." method="_on_ButtonBuilding_pressed"]
